--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <input type="text" placeholder="YY" class="dateb">
                         <input type="text" placeholder="e.g.123" class="dated">
                     </div>
-                    <button class="bd-grid button">Confirm</button>
+                    <button class="bd-grid button"> <a href="./index2.html">Confirm</a> </button>
                 </div>
             </form>
         </section>
